// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VNavigationDrawer.js should render component and match snapshot 1`] = `

<aside class="navigation-drawer navigation-drawer--close"
       style="height: 100%; margin-top: 0px; max-height: calc(100% - 100%px); width: 300px;"
>
  <div class="navigation-drawer__border">
  </div>
</aside>

`;

exports[`VNavigationDrawer.js should render component with custom absolute and match snapshot 1`] = `

<aside class="navigation-drawer navigation-drawer--absolute navigation-drawer--close"
       style="height: 100%; margin-top: 0px; max-height: calc(100% - 100%px); width: 300px;"
>
  <div class="navigation-drawer__border">
  </div>
</aside>

`;

exports[`VNavigationDrawer.js should render component with custom clipped and match snapshot 1`] = `

<aside class="navigation-drawer navigation-drawer--clipped navigation-drawer--close"
       style="height: 100%; margin-top: 0px; max-height: calc(100% - 100%px); width: 300px;"
>
  <div class="navigation-drawer__border">
  </div>
</aside>

`;

exports[`VNavigationDrawer.js should render component with custom disableRouteWatcher and match snapshot 1`] = `

<aside class="navigation-drawer navigation-drawer--close"
       style="height: 100%; margin-top: 0px; max-height: calc(100% - 100%px); width: 300px;"
>
  <div class="navigation-drawer__border">
  </div>
</aside>

`;

exports[`VNavigationDrawer.js should render component with custom enableResizeWatcher and match snapshot 1`] = `

<aside class="navigation-drawer navigation-drawer--close"
       style="height: 100%; margin-top: 0px; max-height: calc(100% - 100%px); width: 300px;"
>
  <div class="navigation-drawer__border">
  </div>
</aside>

`;

exports[`VNavigationDrawer.js should render component with custom floating and match snapshot 1`] = `

<aside class="navigation-drawer navigation-drawer--close navigation-drawer--floating"
       style="height: 100%; margin-top: 0px; max-height: calc(100% - 100%px); width: 300px;"
>
  <div class="navigation-drawer__border">
  </div>
</aside>

`;

exports[`VNavigationDrawer.js should render component with custom height and match snapshot 1`] = `

<aside class="navigation-drawer navigation-drawer--close"
       style="height: 100px; margin-top: 0px; max-height: calc(100% - 100%px); width: 300px;"
>
  <div class="navigation-drawer__border">
  </div>
</aside>

`;

exports[`VNavigationDrawer.js should render component with custom miniVariant and match snapshot 1`] = `

<aside class="navigation-drawer navigation-drawer--close navigation-drawer--mini-variant"
       style="height: 100%; margin-top: 0px; max-height: calc(100% - 100%px); width: 80px;"
>
  <div class="navigation-drawer__border">
  </div>
</aside>

`;

exports[`VNavigationDrawer.js should render component with custom mobileBreakPoint and match snapshot 1`] = `

<aside class="navigation-drawer navigation-drawer--close"
       style="height: 100%; margin-top: 0px; max-height: calc(100% - 100%px); width: 300px;"
>
  <div class="navigation-drawer__border">
  </div>
</aside>

`;

exports[`VNavigationDrawer.js should render component with custom permanent and match snapshot 1`] = `

<aside class="navigation-drawer navigation-drawer--close navigation-drawer--permanent"
       style="height: 100%; margin-top: 0px; max-height: calc(100% - 100%px); width: 300px;"
>
  <div class="navigation-drawer__border">
  </div>
</aside>

`;

exports[`VNavigationDrawer.js should render component with custom persistent and match snapshot 1`] = `

<aside class="navigation-drawer navigation-drawer--close navigation-drawer--persistent"
       style="height: 100%; margin-top: 0px; max-height: calc(100% - 100%px); width: 300px;"
>
  <div class="navigation-drawer__border">
  </div>
</aside>

`;

exports[`VNavigationDrawer.js should render component with custom right and match snapshot 1`] = `

<aside class="navigation-drawer navigation-drawer--close navigation-drawer--right"
       style="height: 100%; margin-top: 0px; max-height: calc(100% - 100%px); width: 300px;"
>
  <div class="navigation-drawer__border">
  </div>
</aside>

`;

exports[`VNavigationDrawer.js should render component with custom temporary and match snapshot 1`] = `

<aside class="navigation-drawer navigation-drawer--close navigation-drawer--temporary"
       style="height: 100%; margin-top: 0px; max-height: calc(100% - 100%px); width: 300px;"
>
  <div class="navigation-drawer__border">
  </div>
</aside>

`;

exports[`VNavigationDrawer.js should render component with custom touchless and match snapshot 1`] = `

<aside class="navigation-drawer navigation-drawer--close"
       style="height: 100%; margin-top: 0px; max-height: calc(100% - 100%px); width: 300px;"
>
  <div class="navigation-drawer__border">
  </div>
</aside>

`;

exports[`VNavigationDrawer.js should render component with custom value and match snapshot 1`] = `

<aside class="navigation-drawer navigation-drawer--close"
       style="height: 100%; margin-top: 0px; max-height: calc(100% - 100%px); width: 300px;"
>
  <div class="navigation-drawer__border">
  </div>
</aside>

`;
